// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viendo 
    253
     
    gastos
     totales 
    $235,123,409.87
  </h1>
</div>
`;

exports[`should correctly render expenses summary with one expense 1`] = `
<div>
  <h1>
    Viendo 
    1
     
    gasto
     totales 
    $2.35
  </h1>
</div>
`;
